syntax="proto3";

option go_package = "/protoUserManagement/proto";

message ErrorResponse {
  uint32 ErrorCode = 1;
  string Message = 2;
}