syntax="proto3";

option go_package = "/protoUserManagement/proto";

import "error.proto";

message NoParam {
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  oneof response {
    UserResponse user_response = 1;
    ErrorResponse error_response = 2;
  }
}

message ChangePasswordRequest {
  string username = 1;
  string oldPassword = 2;
  string newPassword = 3;
}

message ChangePasswordResponse {
  oneof response {
    ChangePasswordSuccessResponse change_password_success_response = 1;
    ErrorResponse error_response = 2;
  }
}

message ChangePasswordSuccessResponse {
  string username = 1;
}

message GetUserRequest {
  uint32 id = 1;
}

message GetUserResponse {
  oneof response {
      UserResponse user_response = 1;
      ErrorResponse error_response = 2;
  }
}

message AddUserRequest {
  uint32 id = 1;
  string name = 2;
  uint32 age = 3;
  string username = 4;
  string password = 5;
}

message UpdateUserRequest {
  uint32 id = 1;
  string name = 2;
  uint32 age = 3;
  string username = 4;
}


message DeleteUserRequest {
  uint32 id = 1;
}

message DeleteUserResponse {
  oneof response {
      DeleteUserSuccessResponse delete_user_success_response = 1;
      ErrorResponse error_response = 2;
  }
}

message DeleteUserSuccessResponse {
  repeated uint32 id = 1;
  uint32 deletedCount = 2;
}

message User {
  uint32 id = 1;
  string name = 2;
  uint32 age = 3;
  string username = 4;
  string password = 5;
}

message UserResponse {
  uint32 id = 1;
  string name = 2;
  uint32 age = 3;
  string username = 4;
}